  parseMsg_presence/player so you can put it in beepDomains.
- Server disconnections are now immediately detected.
- New command "talknpc <x> <y> <sequence>" for sending a sequence of
  commands to the NPC at <x> <y>. Useful in macros.
- Messages about other players being muted moved to parseMsg_statuslook
  domain with verbosity 2.

New commands:
- storage log
  Manually force writing to storage.txt. Some people complain that
  the storage log is broken, so until that has been resolved, this
  command will do.
- ai on
  ai off
  Turns AI on/off.
- card list
  List cards in your inventory.
- card use <card inventory number>
  Get the list of items you can slot the card into.
- card mergelist
  Show the list of items you can slot the card into again.
- card mergecancel
  Cancel the card merging request.
- card merge <merge list number>
  Merge the card into the item.

New config options:
- partySkill: target_dead
  Only use the skill on a dead player. Useful for Resurrection.
- avoidGM_namePattern (regular expression)
  In case your server uses non-standard GM names, you can specify a
  regular expression for GM names with this option.
- teleportAuto_totalDmg (number)
  teleportAuto_totalDmgInLock (number)
  Teleport away if a monster has done this much total damage to you.
- dcOnZeny (number)
  Disconnect automatically when your Zeny equals or lower than the
  specified number. Useful if you use buyAuto or the auto buy plugin.

New control files:
- control/sys.txt
  This file stores options that can only be loaded once (so this file
  cannot be reloaded). You can get a default version of this file
  from the default configuration files archive.

Internal:
- whenGroundStatus() now takes coordinates instead of a player/monster.
- There's now a %sys (in package Settings) variable for options in
  control/sys.txt
- Most modules are now autoloadable (see perldoc SelfLoader).

Credits:
- Damokles: case sensitivity fix, avoidGM_namePattern.